# noisy

./: .dockerignore  .gitignore  Dockerfile  README.md  config.json  docker-compose.yaml  noisy.py  pyproject.toml  settings.py  setup.cfg  urls.json
.github/workflows/: docker-image.yml  python-app.yml
