[tool.poetry]
name = "noisy"
version = "0.1.0"
description = "Simple random DNS, HTTP/S internet traffic noise generator"
authors = ["Your Name <you@example.com>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.10"
types-requests = "~2.26.1"
aiohttp = "~3.8.0"
orjson = "~3.6.4"
environs = "~9.3.4"

[tool.poetry.dev-dependencies]
mypy = "~0.910"
flake8 = "~4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
